@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.ukr-com</groupId>
     <artifactId>ASBlockWar</artifactId>
-    <version>3.3.19</version>
+    <version>3.3.21</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -144,6 +144,9 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>net.ukrcom.asblockwar.ASBlockWar</mainClass>
+                                    <manifestEntries>
+                                        <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
+                                    </manifestEntries>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -194,6 +197,9 @@
                     <mainJar>${project.build.finalName}.jar</mainJar>
                     <mainClass>net.ukrcom.asblockwar.ASBlockWar</mainClass>
                     <type>APP_IMAGE</type>
+                    <javaOptions>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </javaOptions>
                 </configuration>
             </plugin>
             <plugin>
